// SPDX-FileCopyrightText: (C) 2025 Intel Corporation
// SPDX-License-Identifier: Apache-2.0

syntax = "proto3";

package resources.telemetry.v1;

import "google/api/field_behavior.proto";
import "validate/validate.proto";

option go_package = "github.com/open-edge-platform/infra-core/apiv2/v2/internal/pbapi/resources/telemetry/v1;telemetryv1";

// Log level used for the telemetry config.
// This field must only be defined if kind equals to TELEMETRY_CONFIG_KIND_LOGS.
enum SeverityLevel {
  SEVERITY_LEVEL_UNSPECIFIED = 0;
  SEVERITY_LEVEL_CRITICAL = 1;
  SEVERITY_LEVEL_ERROR = 2;
  SEVERITY_LEVEL_WARN = 3;
  SEVERITY_LEVEL_INFO = 4;
  SEVERITY_LEVEL_DEBUG = 5;
}

// Kind of telemetry collector.
enum TelemetryResourceKind {
  TELEMETRY_RESOURCE_KIND_UNSPECIFIED = 0;
  TELEMETRY_RESOURCE_KIND_METRICS = 1;
  TELEMETRY_RESOURCE_KIND_LOGS = 2;
}

// The collector kind.
enum CollectorKind {
  COLLECTOR_KIND_UNSPECIFIED = 0;
  // telemetry data collected from bare-metal host.
  COLLECTOR_KIND_HOST = 1;
  // // telemetry data collected from Kubernetes cluster.
  COLLECTOR_KIND_CLUSTER = 2;
}

// TelemetryLogsGroupResource.
message TelemetryLogsGroupResource {
  // Unique ID of the telemetry group.
  string resource_id = 1 [
    (google.api.field_behavior) = OUTPUT_ONLY,
    (validate.rules).string = {
      pattern: "^telemetrygroup-[0-9a-f]{8}$"
      max_bytes: 23
    }
  ];

  // Unique ID of the telemetry group. Alias of resource_id.
  string telemetry_logs_group_id = 2 [
    (google.api.field_behavior) = OUTPUT_ONLY,
    (validate.rules).string = {
      pattern: "^telemetrygroup-[0-9a-f]{8}$"
      max_bytes: 23
    }
  ];

  // Human-readable name for the log group.
  string name = 3 [
    (google.api.field_behavior) = REQUIRED,
    (validate.rules).string = {
      pattern: "^$|^[a-zA-Z-_0-9./: ]+$"
      max_len: 20
    }
  ];

  // The collector kind.
  CollectorKind collector_kind = 4 [(google.api.field_behavior) = REQUIRED];
  // A list of log groups to collect.
  repeated string groups = 5 [
    (google.api.field_behavior) = REQUIRED,
    (validate.rules).repeated.items.string = {pattern: "^$|^[a-zA-Z-_0-9./:;=@?!#,<>*()\" ]+$"}
  ];
}

// TelemetryMetricsGroupResource.
message TelemetryMetricsGroupResource {
  // Unique ID of the telemetry group.
  string resource_id = 1 [
    (google.api.field_behavior) = OUTPUT_ONLY,
    (validate.rules).string = {
      pattern: "^telemetrygroup-[0-9a-f]{8}$"
      max_bytes: 23
    }
  ];

  // Unique ID of the telemetry group. Alias of resource_id.
  string telemetry_metrics_group_id = 2 [
    (google.api.field_behavior) = OUTPUT_ONLY,
    (validate.rules).string = {
      pattern: "^telemetrygroup-[0-9a-f]{8}$"
      max_bytes: 23
    }
  ];

  // Human-readable name for the log group.
  string name = 3 [
    (google.api.field_behavior) = REQUIRED,
    (validate.rules).string = {
      pattern: "^$|^[a-zA-Z-_0-9./: ]+$"
      max_len: 20
    }
  ];

  // The collector kind.
  CollectorKind collector_kind = 4 [(google.api.field_behavior) = REQUIRED];

  // A list of log groups to collect.
  repeated string groups = 5 [
    (google.api.field_behavior) = REQUIRED,
    (validate.rules).repeated.items.string = {pattern: "^$|^[a-zA-Z-_0-9./:;=@?!#,<>*()\" ]+$"}
  ];
}

// A telemetry log profile for a hierarchy object.
message TelemetryLogsProfileResource {
  // The ID of the telemetry profile.
  string resource_id = 1 [
    (google.api.field_behavior) = OUTPUT_ONLY,
    (validate.rules).string = {
      pattern: "^telemetryprofile-[0-9a-f]{8}$"
      max_bytes: 25
    }
  ];

  // The ID of the telemetry profile.
  string profile_id = 2 [
    (google.api.field_behavior) = OUTPUT_ONLY,
    (validate.rules).string = {
      pattern: "^telemetryprofile-[0-9a-f]{8}$"
      max_bytes: 25
    }
  ];

  // The ID of the instance that the telemetry profile is assigned to.
  // Can only be one of targetInstance, targetSite, or targetRegion.
  string target_instance = 3 [(validate.rules).string = {
    pattern: "^inst-[0-9a-f]{8}$"
    max_bytes: 13
  }];
  // The ID of the site where the telemetry profile is assigned to.
  // Can only be one of targetInstance, targetSite, or targetRegion.
  string target_site = 4 [(validate.rules).string = {
    pattern: "^site-[0-9a-f]{8}$"
    max_bytes: 13
  }];
  // The ID of the region where the telemetry profile is assigned to.
  // Can only be one of targetInstance, targetSite, or targetRegion.
  string target_region = 5 [(validate.rules).string = {
    pattern: "^region-[0-9a-f]{8}$"
    max_bytes: 15
  }];
  // The log level og the telemetry profile.
  SeverityLevel log_level = 6 [(google.api.field_behavior) = REQUIRED];
  // The unique identifier of the telemetry log group.
  string logs_group_id = 7 [
    (google.api.field_behavior) = REQUIRED,
    (validate.rules).string = {
      pattern: "^telemetrygroup-[0-9a-f]{8}$"
      max_bytes: 23
    }
  ];
  // The log group associated with the telemetry profile.
  TelemetryLogsGroupResource logs_group = 8 [(google.api.field_behavior) = OUTPUT_ONLY];
}

// A telemetry metric profile for a hierarchy object.
message TelemetryMetricsProfileResource {
  // The ID of the telemetry profile.
  string resource_id = 1 [
    (google.api.field_behavior) = OUTPUT_ONLY,
    (validate.rules).string = {
      pattern: "^telemetryprofile-[0-9a-f]{8}$"
      max_bytes: 25
    }
  ];

  // The ID of the telemetry profile.
  string profile_id = 2 [
    (google.api.field_behavior) = OUTPUT_ONLY,
    (validate.rules).string = {
      pattern: "^telemetryprofile-[0-9a-f]{8}$"
      max_bytes: 25
    }
  ];

  // The ID of the instance that the telemetry profile is assigned to.
  // Can only be one of targetInstance, targetSite, or targetRegion.
  string target_instance = 3 [(validate.rules).string = {
    pattern: "^inst-[0-9a-f]{8}$"
    max_bytes: 13
  }];

  // The ID of the site where the telemetry profile is assigned to.
  // Can only be one of targetInstance, targetSite, or targetRegion.
  string target_site = 4 [(validate.rules).string = {
    pattern: "^site-[0-9a-f]{8}$"
    max_bytes: 13
  }];
  // The ID of the region where the telemetry profile is assigned to.
  // Can only be one of targetInstance, targetSite, or targetRegion.
  string target_region = 5 [(validate.rules).string = {
    pattern: "^region-[0-9a-f]{8}$"
    max_bytes: 15
  }];

  // Metric interval (in seconds) for the telemetry profile.
  // This field must only be defined if the type equals to TELEMETRY_CONFIG_KIND_METRICS.
  uint32 metrics_interval = 6 [(google.api.field_behavior) = REQUIRED];
  // The unique identifier of the telemetry metric group.
  string metrics_group_id = 7 [
    (google.api.field_behavior) = REQUIRED,
    (validate.rules).string = {
      pattern: "^telemetrygroup-[0-9a-f]{8}$"
      max_bytes: 23
    }
  ];
  // The metric group associated with the telemetry profile.
  TelemetryMetricsGroupResource metrics_group = 8 [(google.api.field_behavior) = OUTPUT_ONLY];
}
